// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/deprecated.md inline validation: correct 1`] = `Array []`;

exports[`docs/rules/deprecated.md inline validation: custom-message 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 1,
        "message": "<my-element> is deprecated: replaced with <other-element>",
        "offset": 1,
        "ruleId": "deprecated",
        "selector": "my-element",
        "severity": 2,
        "size": 10,
      },
    ],
    "source": "<my-element>...</my-element>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/deprecated.md inline validation: incorrect 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 1,
        "message": "<center> is deprecated",
        "offset": 1,
        "ruleId": "deprecated",
        "selector": "center",
        "severity": 2,
        "size": 6,
      },
      Object {
        "column": 2,
        "context": undefined,
        "line": 2,
        "message": "<big> is deprecated",
        "offset": 22,
        "ruleId": "deprecated",
        "selector": "big",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<center>...</center>
<big>...</big>",
    "warningCount": 0,
  },
]
`;
